# RyFi

./: .gitignore  CMakeLists.txt  license  readme.md  todo.txt
src/: bladerf.cpp  bladerf.h  device.cpp  device.h  limesdr.cpp  main.cpp  tun.cpp  tun.h  version.h
src/device/: bladerf.cpp  bladerf.h  limesdr.cpp  limesdr.h  usrp.cpp  usrp.h
src/hardware/: bladerf.cpp  limesdr.cpp  limesdr.h
src/ryfi/: common.h  packet.cpp  packet.h  receiver.cpp  receiver.h  transmitter.cpp  transmitter.h
tools/: SetupLinkRyFi.sh  gen_scrambler.py
